[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "abc-merfish-analysis"
description = "Shared tools for accessing and processing ABC Atlas MERSCOPE data."
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Allen Institute for Neural Dynamics"}
]
classifiers = [
    "Programming Language :: Python :: 3"
]
readme = "README.md"
dynamic = ["version"]

dependencies = [
    "anndata",
    "nibabel",
    "pydantic",
    "pyarrow",
    "scipy",
    "git+https://github.com/alleninstitute/abc_atlas_access.git",
    "importlib_resources; python_version < '3.9'"
]

[project.optional-dependencies]
spatialdata = [
    "spatialdata==0.2.3"
]
plot = [
    "matplotlib",
    "seaborn",
    "colorcet",
    "colour-science"
]
dev = [
    'ruff'
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "abc_merfish_analysis.__version__"}

[tool.setuptools_scm]

[tool.ruff]
line-length = 100
